--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,13 @@
-pandas  
-sqlalchemy 
-nltk
+pandas==2.0.0  
+SQLAlchemy==2.0.9 
+nltk==3.8.1
 xgboost==1.7.5
 scikit-learn==1.2.2
-plotly
-flask
-contractions
-autocorrect
-uvicorn
-beautifulsoup4
-gunicorn
-spacy
-textblob
-tabulate
+plotly==5.14.1
+Flask==2.2.3
+contractions==0.1.73
+beautifulsoup4==4.12.2
+gunicorn==21.2.0
+spacy==3.6.0
+textblob==0.17.1
+tabulate==0.9.0
